--- a/.circleci/ansible/configure-server.yml
+++ b/.circleci/ansible/configure-server.yml
@@ -16,10 +16,9 @@
       wait_for_connection:
 
     - name: 'install python for Ansible.'
-      apt:
-        name: python3
-        state: latest
-        update_cache: yes
+      become: true
+      raw: test -e /usr/bin/python3 || (apt -y update && apt install -y python3)
+      changed_when: false
 
   environment:
     - NODE_ENV: production
