--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -25,7 +25,7 @@
 - name: extract artifact
   become: yes
   unarchive:
-    src: /root/project/artifact.tar.gz
+    src: files/artifact.tar.gz
     dest: .
 
 - name: start app
