--- a/.circleci/files/backend.yml
+++ b/.circleci/files/backend.yml
@@ -21,8 +21,8 @@ Resources:
           FromPort: 3030
           ToPort: 3030
           CidrIp: 0.0.0.0/0
-        # - IpProtocol: -1
-        #   CidrIp: 0.0.0.0/0
+        - IpProtocol: -1
+          CidrIp: 0.0.0.0/0
         # - IpProtocol: tcp
         #   FromPort: 9100
         #   ToPort: 9100
