--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -423,7 +423,7 @@ workflows:
           requires: [test-frontend, test-backend, scan-frontend, scan-backend]
           filters:
             branches:
-              only: [test]
+              only: [develop]
       # - add-prometheus-node-exporter:
       #     requires: [deploy-infrastructure]
       - configure-infrastructure:
