--- a/.circleci/files/backend.yml
+++ b/.circleci/files/backend.yml
@@ -23,10 +23,10 @@ Resources:
           CidrIp: 0.0.0.0/0
         - IpProtocol: -1
           CidrIp: 0.0.0.0/0
-        - IpProtocol: tcp
-          FromPort: 9100
-          ToPort: 9100
-          CidrIp: 0.0.0.0/0
+        # - IpProtocol: tcp
+        #   FromPort: 9100
+        #   ToPort: 9100
+        #   CidrIp: 0.0.0.0/0
 
   EC2Instance:
     Type: AWS::EC2::Instance
