--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -1,35 +1,13 @@
 ---
-- name: 'update and upgrade packages.'
-  become: yes
-  apt:
-    upgrade: yes
-    update_cache: yes
-    cache_valid_time: 86400
-- name: remove unneeded deps
-  become: yes
-  apt:
-    autoremove: yes
-- name: install deps
-  become: yes
-  apt:
-    name: ['nodejs', 'npm']
-    state: latest
-    update_cache: yes
-- name: install pm2
-  become: yes
-  npm:
-    name: pm2
-    global: yes
-    state: latest
-    production: yes
-- name: extract artifact
+- name: Extract the zipped artifact
   become: yes
   unarchive:
     src: /root/project/artifact.tar.gz
     dest: .
-
-- name: start app
+    
+- name: Start the app
   become: yes
   shell: |
-    pm2 delete all
-    pm2 start npm -- start
+    npm install
+    pm2 stop default
+    pm2 start npm -- run start
